2013-02-08  Charlie Zender  <zender@uci.edu>

	* Fix overcount of record dimensions

	* Match rx containing slashes to full path not to stub
	This allows rx's like /g11/uint_.+ to succeed
	Previously, rx's only worked on stubs (last components of full names)

	* Re-format global metadata output

	* Add all coordinates necessary to make in_grp.cdl well-defined CF file (i.e., squelch CF warnings)

	* NCO 4.2.6 release procedure:
 	Changes since nco-4_2_5: --rec_apn, non-atomic ignore
	cd ~/nco;cvs tag -d nco-4_2_6;cvs tag -d nco-4_2_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.6 release"
	cvs tag -c nco-4_2_6;cvs tag -c nco-4_2_6-1

	* Code to ignore non-atomic types appears to work

	* Add non-atomic types to in_grp.cdl.
	Initializations break ncgen from netCDF prior to ~201211. What to do?

	* Update to netCDF 20130208 snapshot

	* Add support for ignoring (instead of failing on) non-atomic types

2013-02-04  Charlie Zender  <zender@uci.edu>

	* Split ncks dimension report into unique fixed and record dimensions

2013-02-01  Charlie Zender  <zender@uci.edu>

	* Add --rec_apn documentation to nco.texi

2013-01-31  Charlie Zender  <zender@uci.edu>

	* Add --rec_apn regression tests

	* Add --rec_apn to ncra and ncrcat. Makes possible direct appends.

2013-01-29  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.5 release procedure:
 	Changes since nco-4_2_4: fix ncks mk/fix_rec_dmn bugs, metadata printing
	cd ~/nco;cvs tag -d nco-4_2_5;cvs tag -d nco-4_2_5-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.5 release"
	cvs tag -c nco-4_2_5;cvs tag -c nco-4_2_5-1

2013-01-27  Charlie Zender  <zender@uci.edu>

	* Update documentation to refect new --fix_rec_dmn syntax

	* Fix 4.2.4 bug that broke --fix_rec_dmn

	* Add --fix_rec_dmn regression tests, including netCDF3 test with MM3 workaround

	* Remove tm2_tm3 from in_grp.cdl since ncgen netCDF 4.2.1- chokes on it

	* Allow for --fix_rec_dmn corner case in nco_cpy_rec_var_val(),